--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -1,22 +1,25 @@
 ---
 const services = [
   {
-    step: '01',
-    name: 'Design',
+    step: "01",
+    name: "Design",
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
+    pathImage: "/img/img4.jpeg",
   },
   {
-    step: '02',
-    name: 'Develop',
+    step: "02",
+    name: "Develop",
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
+    pathImage: "/img/img1.jpeg",
   },
   {
-    step: '03',
-    name: 'Maintain',
+    step: "03",
+    name: "Maintain",
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
+    pathImage: "/img/img2.jpg",
   },
 ];
 ---
@@ -24,12 +27,19 @@ const services = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-12 sm:gap-16">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Services</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Servicios</h2>
       <div class="grid gap-8 lg:grid-cols-3">
         {
           services.map((service) => (
-            <div class="bg-primary-500/10 dark:bg-primary-400/10 flex flex-col gap-12 rounded-3xl px-6 py-8">
-              <div class="flex flex-col gap-4">
+            <div class="bg-primary-500/10 dark:bg-primary-400/10 flex flex-col rounded-3xl overflow-hidden">
+              <img
+                class="h-auto w-full"
+                width="1280"
+                height="640"
+                src={service.pathImage}
+                alt="Hero picture"
+              />
+              <div class="flex flex-col gap-4 px-6 py-8">
                 <h3 class="text-xl font-medium">{service.name}</h3>
                 <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
                   {service.description}
