nueva imagen svg

--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -13,7 +13,7 @@
             class="h-auto w-full rounded-3xl"
             width="1280"
             height="640"
-            src="/assets/logo.svg"
+            src="/assets/image.svg"
             alt="Hero picture"
           />
         </div>
