--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -85,7 +85,7 @@ const bottomLinks = [
           class="h-8 w-auto"
           width="65"
           height="40"
-          src="/assets/logo.svg"
+          src="/assets/image.svg"
           alt="Stone"
         />
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
