--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -42,7 +42,7 @@ const links = [
           class="h-8 w-auto"
           width="65"
           height="40"
-          :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/image.svg'"
+          :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.png'"
           alt="Stone"
         />
       </a>
