refactor(Front): se agrega info de contacto

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,102 +1,70 @@
 ---
 const bottomLinks = [
   {
-    header: 'Social',
+    header: "Social",
     links: [
       {
-        name: 'Github',
-        href: 'https://github.com/',
+        name: "Instagram",
+        href: "https://www.instagram.com/vivianamaldonado.altacostura/",
         isExternal: true,
+        iconSvg: "M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
       },
       {
-        name: 'Twitter',
-        href: 'https://twitter.com/',
+        name: "Facebook",
+        href: "https://www.facebook.com/altacosturavivi",
         isExternal: true,
-      },
-      {
-        name: 'Instagram',
-        href: 'https://instagram.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Facebook',
-        href: 'https://facebook.com/',
-        isExternal: true,
-      },
-    ],
-  },
-  {
-    header: 'Company',
-    links: [
-      {
-        name: 'Home',
-        href: '/',
-        isExternal: false,
-      },
-      {
-        name: 'About',
-        href: '/about',
-        isExternal: false,
-      },
-      {
-        name: 'Pricing',
-        href: '/pricing',
-        isExternal: false,
-      },
-      {
-        name: 'Contact',
-        href: '/contact',
-        isExternal: false,
-      },
-    ],
-  },
-  {
-    header: 'Legal',
-    links: [
-      {
-        name: 'Privacy',
-        href: '/privacy',
-        isExternal: false,
-      },
-      {
-        name: '404',
-        href: '/404',
-        isExternal: false,
-      },
-      {
-        name: 'Styleguide',
-        href: '/styleguide',
-        isExternal: false,
+        iconSvg: "M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
       },
     ],
   },
 ];
 ---
 
-<footer
-  class="bg-primary-500/10 dark:bg-primary-400/10 mt-16 py-16 lg:mt-20 lg:py-20"
-  aria-labelledby="footer-heading"
->
+<footer class="transition bg-primary-500/10" aria-labelledby="footer-heading">
   <h2 id="footer-heading" class="sr-only">Footer</h2>
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-    <div class="flex flex-col justify-between gap-12 sm:gap-16 lg:flex-row">
-      <div class="flex max-w-sm flex-col items-start gap-6 sm:gap-8">
+  <div
+    class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 sm:px-6 sm:py-6 lg:max-w-7xl lg:px-8"
+  >
+    <!-- Brand logo -->
+    <div class="flex">
+        <span class="sr-only">Stone</span>
         <img
-          class="h-8 w-auto"
+          class="h-12 w-auto"
           width="65"
           height="40"
           src="/assets/logo.png"
           alt="Stone"
         />
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
-          Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
-          Startup websites.
-        </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
-      </div>
+    </div>
+    <nav class="grid grid-flow-col gap-4 ">
+      {
+        bottomLinks.map((group) => (
+          <ul role="list" class="flex flex-row gap-3">
+            {group.links.map((link) => (
+              <a
+                href={link.href}
+                class="focus-visible:outline-primary-950 dark:focus-visible:outline-primary-200 inline-flex items-center gap-1 rounded-md text-base hover:underline focus-visible:outline focus-visible:outline-2"
+                target={link.isExternal ? "_blank" : undefined}
+                rel={link.isExternal ? "noopener" : undefined}
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path d={link.iconSvg} />
+                </svg>
+              </a>
+            ))}
+          </ul>
+        ))
+      }
+    </nav>
+  </div>
 
-      <!-- Bottom links -->
-      <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-3">
+  <!-- Bottom links -->
+  <!-- <div class="grid max-w-xl flex-1 grid-cols-3 gap-8 sm:grid-cols-3">
         {
           bottomLinks.map((group) => (
             <div class="flex flex-col gap-4">
@@ -129,7 +97,5 @@ const bottomLinks = [
             </div>
           ))
         }
-      </div>
-    </div>
-  </div>
+      </div> -->
 </footer>
