--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -8,9 +8,10 @@
         <p
           class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg"
         >
-          Viviana Maldonado es una diseñadora reconocida en el mundo de la alta
-          costura. Su trabajo se caracteriza por la elegancia, la atención al
-          detalle y la artesanía excepcional en sus diseños
+          Soy una diseñadora y modista de alta costura. Mi rabajo
+          se caracteriza en la atención personalizada, otorgando exclusividad en
+          la confección de prendas realizadas a medida y a elección del cliente.
+          Los detalles y la artesanía excepcional se destacan en mis prendas.
         </p>
         <!-- <a
           href="/about"
