--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -14,7 +14,7 @@
             width="1280"
             height="640"
             src="/assets/logo.png"
-            alt="Hero picture"
+            alt="alta costura,taller de costura,moda,tienda,vestidos,egresos,tunuyán,mendoza,costura"
           />
         </div>
         <!-- <a
@@ -29,7 +29,7 @@
         width="1280"
         height="640"
         src="/assets/hero.webp"
-        alt="Hero picture"
+        alt="alta costura,taller de costura,moda,tienda,vestidos,egresos,tunuyán,mendoza,costura"
       />
     </div>
   </div>
