--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -33,7 +33,7 @@ const bottomLinks = [
           width="65"
           height="40"
           src="/assets/logo.png"
-          alt="Stone"
+          alt="alta costura,taller de costura,moda,tienda,vestidos,egresos,tunuyán,mendoza,costura"
         />
     </div>
     <nav class="grid grid-flow-col gap-4 ">
