--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -2,24 +2,26 @@
 const services = [
   {
     step: "01",
-    name: "Design",
-    description:
-      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
-    pathImage: "/img/img4.jpeg",
+    name: "Vestidos de fiesta",
+    description: ["Novias", "Egresos", "15 años"],
+    pathImage: "/img/img2.jpg",
   },
   {
     step: "02",
-    name: "Develop",
-    description:
-      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
+    name: "Confección",
+    description: [
+      "Modelos a pedido o elección",
+      "Indumentaria de trabajo",
+      "Indumentaria escolar",
+      "indumentaria básica",
+    ],
     pathImage: "/img/img1.jpeg",
   },
   {
     step: "03",
-    name: "Maintain",
-    description:
-      "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.",
-    pathImage: "/img/img2.jpg",
+    name: "Bordados",
+    description: ["Pedrería", "Bordados a máquina"],
+    pathImage: "/img/img4.jpeg",
   },
 ];
 ---
@@ -41,9 +43,22 @@ const services = [
               />
               <div class="flex flex-col gap-4 px-6 py-8">
                 <h3 class="text-xl font-medium">{service.name}</h3>
-                <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-                  {service.description}
-                </p>
+                <ul>
+                  {service.description.map((d) => (
+                    <li class="flex gap-3">
+                    <svg
+                      class="text-primary-600 dark:text-primary-400 h-6 w-6 flex-shrink-0"
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                      fill="currentColor"
+                      aria-hidden="true"
+                    >
+                      <path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11.0026 16L18.0737 8.92893L16.6595 7.51472L11.0026 13.1716L8.17421 10.3431L6.75999 11.7574L11.0026 16Z" />
+                    </svg>
+                    <span>{d}</span>
+                  </li>
+                  ))}
+                </ul>
               </div>
             </div>
           ))
